--- a/style.css
+++ b/style.css
@@ -29,5 +29,15 @@ html {
 .nav-link {
     padding: 0 20px;
     line-height: 50px;
-    color: aquamarine;
+    color: brown;
+    transition: .3s;
+}
+
+.section-item a {
+    color: #829985;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+.section-item a:hover {
+    color: #4d2323
 }
