--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-.body {
+body {
     font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -29,8 +33,13 @@ html {
 .nav-link {
     padding: 0 20px;
     line-height: 50px;
-    color: brown;
-    transition: .3s;
+    color: #829985;
+    transition: color 0.5s;
+    text-decoration: none;
+}
+
+.nav-link:hover {
+    color: #5d7260
 }
 
 .section-item a {
@@ -40,4 +49,85 @@ html {
 }
 .section-item a:hover {
     color: #4d2323
+}
+.main-container {
+    display: flex;
+    flex-wrap:wrap;
+}
+.section {
+    width: 50%;
+}
+
+@media (max-width: 768px) {
+    .section {
+        width: 100%;
+    }
+}
+
+.section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985
+}
+
+.header {
+    background-color: bisque;
+}
+
+.section-profile-logo {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.section-profile {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 50px 30px 35px;
+    border-bottom: 15px solid cadetblue;
+}
+
+.section-profile-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.main-title {
+    position: relative;
+    padding: 0;
+    margin-bottom: 20px;
+    color: black;
+    font-size: 32px;
+    font-weight: 300;
+    letter-spacing: 10px;
+    line-height: 50px;
+    word-spacing: 3px;
+}
+
+.main-title::after {
+    content: "";
+    position: absolute;
+    bottom: -19px;
+    left: 50%;
+    margin-left: -70px;
+    width: 140px;
+    height: 2px;
+    background-color: #5d7260;
+
+}
+
+.section-subtitle {
+    margin-top: 20px;
+    color: black;
+    line-height: 50px;
+    font-weight: 300;
+    letter-spacing: 2px;
 }
