--- a/style.css
+++ b/style.css
@@ -148,3 +148,24 @@ html {
     padding: 0;
     padding-left: 30;
 }
+
+.footer {
+    background-color: #8b7aa8;
+    padding: 25px;
+
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    color: whitesmoke;
+}
+
+.rss {
+    width: 118px;
+    height: 45px;
+    background-image: url(./assets/img/rs_school_js.svg);
+
+}
