--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .nav-list {
